--- a/jop_posting_page.html
+++ b/jop_posting_page.html
@@ -1,90 +1,135 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>إضافة وظيفة - موقع التوظيف</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            direction: rtl;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-        }
-        header {
-            background-color: #007BFF;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        form {
-            max-width: 600px;
-            margin: 50px auto;
-            background-color: white;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        form h2 {
-            text-align: center;
-            color: #333;
-            margin-bottom: 20px;
-        }
-        form label {
-            display: block;
-            margin: 10px 0 5px;
-            color: #333;
-            font-weight: bold;
-        }
-        form input, form textarea, form button {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        form textarea {
-            height: 100px;
-            resize: none;
-        }
-        form button {
-            background-color: #007BFF;
-            color: white;
-            font-size: 1em;
-            border: none;
-            cursor: pointer;
-        }
-        form button:hover {
-            background-color: #0056b3;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <title>الوظائف المتاحة</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      direction: rtl;
+      background-color: #f9f9f9;
+      margin: 0;
+      padding: 20px;
+    }
+    #search {
+      width: 300px;
+      height: 30px;
+      margin-bottom: 20px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      padding: 5px 10px;
+      font-size: 16px;
+    }
+    .job-card {
+      background: white;
+      border-radius: 10px;
+      padding: 20px;
+      margin-bottom: 15px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    .job-card h3 {
+      margin: 0 0 10px 0;
+    }
+    .job-card p {
+      margin: 5px 0;
+      color: #555;
+    }
+    button.details-btn {
+      margin-top: 10px;
+      background-color: #007BFF;
+      color: white;
+      border: none;
+      padding: 10px 15px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    button.details-btn:hover {
+      background-color: #0056b3;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>إضافة وظيفة جديدة</h1>
-    </header>
+  <h1>الوظائف المتاحة</h1>
+  <input type="search" id="search" placeholder="ابحث عن وظيفة هنا..." />
 
-    <form action="#" method="post">
-        <h2>تفاصيل الوظيفة</h2>
+  <div id="jobs-container"></div>
 
-        <label for="job-title">عنوان الوظيفة:</label>
-        <input type="text" id="job-title" name="job_title" placeholder="مثل: مندوب مبيعات" required>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-app.js";
+    import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-firestore.js";
 
-        <label for="job-location">الموقع:</label>
-        <input type="text" id="job-location" name="job_location" placeholder="مثل: الخرطوم،الخرطوم وسط،السجانة" required>
+    const firebaseConfig = {
+      apiKey: "AIzaSyBsIaCjE7QOQ6QkhqhCIMA3sLdMvxBxPHk",
+      authDomain: "shaglni-c64c0.firebaseapp.com",
+      projectId: "shaglni-c64c0",
+      storageBucket: "shaglni-c64c0.appspot.com",
+      messagingSenderId: "768887356636",
+      appId: "1:768887356636:web:8a697d04b860eba89c8819",
+      measurementId: "G-QNRW412GZD"
+    };
 
-        <label for="job-duration">مدة العمل:</label>
-        <input type="text" id="job-duration" name="job_duration" placeholder="مثل: يوم، أسبوع، شهر" required>
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
 
-        <label for="job-salary">الراتب:</label>
-        <input type="number" id="job-salary" name="job_salary" placeholder="أدخل الراتب بالجنيه" required>
+    const jobsContainer = document.getElementById("jobs-container");
+    const searchInput = document.getElementById("search");
 
-        <label for="job-description">وصف الوظيفة:</label>
-        <textarea id="job-description" name="job_description" placeholder="أدخل تفاصيل الوظيفة هنا" required></textarea>
+    let jobsData = [];
 
-        <button type="submit">إضافة الوظيفة</button>
-    </form>
-    <div><p>  دي دايرة قاعدة بيانات للمواصلة </p></div>
+    function renderJobs(jobs) {
+      jobsContainer.innerHTML = "";
+      if (jobs.length === 0) {
+        jobsContainer.innerHTML = "<p>لا توجد وظائف مطابقة.</p>";
+        return;
+      }
+      jobs.forEach(job => {
+        const div = document.createElement("div");
+        div.classList.add("job-card");
+
+        div.innerHTML = `
+          <h3>${job.title}</h3>
+          <p>الموقع: ${job.location}</p>
+          <p>المدة: ${job.duration}</p>
+          <p>الراتب: ${job.salary}</p>
+          <button class="details-btn">عرض التفاصيل</button>
+        `;
+
+        const btn = div.querySelector(".details-btn");
+        btn.addEventListener("click", () => {
+          alert(`تفاصيل الوظيفة:\n${job.description}`);
+        });
+
+        jobsContainer.appendChild(div);
+      });
+    }
+
+    async function loadJobs() {
+      const querySnapshot = await getDocs(collection(db, "jobs"));
+      jobsData = [];
+      querySnapshot.forEach(doc => {
+        jobsData.push(doc.data());
+      });
+      renderJobs(jobsData);
+    }
+
+    searchInput.addEventListener("input", () => {
+      const searchTerm = searchInput.value.trim().toLowerCase();
+      if (!searchTerm) {
+        renderJobs(jobsData);
+        return;
+      }
+      const filtered = jobsData.filter(job => {
+        return (
+          job.title.toLowerCase().includes(searchTerm) ||
+          job.location.toLowerCase().includes(searchTerm) ||
+          job.duration.toLowerCase().includes(searchTerm) ||
+          job.salary.toLowerCase().includes(searchTerm)
+        );
+      });
+      renderJobs(filtered);
+    });
+
+    loadJobs();
+  </script>
 </body>
 </html>
