--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>الصفحة الرئيسية - موقع التوظيف</title>
+    <title>الصفحة الرئيسية - موقع  شغلني</title>
     <style>
         /* 🔹 إعدادات الصفحة */
         body {
@@ -125,7 +125,9 @@
         <nav>
             <a href="index.html">الرئيسية</a>
             <a href="job_listing_page.html">الوظائف</a>
-            <a href="employee_listing_page.html">الموظفون</a>
+<a href="jop_posting_page.html">تسجيل وظيفة</a>
+            
+                                                                            <a href="employee_listing_page.html">الموظفون</a>
             <a href="contact-us.html">تواصل معنا</a>
             <a href="Profile_page.html">حسابي</a>
             <a href="login_page.html">تسجيل الدخول</a>
