--- a/login_page.html
+++ b/login_page.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>تسجيل الدخول - موقع التوظيف</title>
     <style>
         body {
@@ -19,51 +19,72 @@
             text-align: center;
         }
         form {
-            max-width: 500px;
+            max-width: 400px;
             margin: 50px auto;
             background-color: white;
             padding: 30px;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
         form h2 {
             text-align: center;
             color: #333;
             margin-bottom: 20px;
         }
-        form label {
+        label {
             display: block;
-            margin: 10px 0 5px;
-            color: #333;
+            margin: 12px 0 6px;
             font-weight: bold;
+            color: #333;
         }
-        form input {
+        input {
             width: 100%;
-            padding: 10px;
-            margin: 10px 0;
+            padding: 12px 10px;
+            font-size: 1rem;
             border: 1px solid #ccc;
-            border-radius: 5px;
+            border-radius: 6px;
+            box-sizing: border-box;
+            transition: border-color 0.3s;
         }
-        form button {
+        input:focus {
+            border-color: #007BFF;
+            outline: none;
+        }
+        button {
+            width: 100%;
+            padding: 14px;
+            font-size: 1.1rem;
             background-color: #007BFF;
             color: white;
-            font-size: 1em;
             border: none;
+            border-radius: 6px;
             cursor: pointer;
+            margin-top: 20px;
+            transition: background-color 0.3s;
         }
-        form button:hover {
+        button:hover {
             background-color: #0056b3;
         }
         .form-footer {
             text-align: center;
             margin-top: 20px;
+            font-size: 0.9rem;
+            color: #555;
         }
         .form-footer a {
             color: #007BFF;
             text-decoration: none;
+            font-weight: bold;
         }
         .form-footer a:hover {
             text-decoration: underline;
+        }
+        .error-message {
+            color: red;
+            margin-top: 10px;
+            font-weight: bold;
+            text-align: center;
+            min-height: 24px;
         }
     </style>
 </head>
@@ -72,16 +93,18 @@
         <h1>تسجيل الدخول إلى حسابك</h1>
     </header>
 
-    <form onsubmit="return loginUser(event)">
+    <form id="loginForm" onsubmit="return loginUser(event)">
         <h2>دخول</h2>
 
         <label for="email">البريد الإلكتروني:</label>
-        <input type="email" id="email" name="email" placeholder="أدخل بريدك الإلكتروني" required>
+        <input type="email" id="email" name="email" placeholder="أدخل بريدك الإلكتروني" required />
 
         <label for="password">كلمة المرور:</label>
-        <input type="password" id="password" name="password" placeholder="أدخل كلمة المرور" required>
+        <input type="password" id="password" name="password" placeholder="أدخل كلمة المرور" required />
 
         <button type="submit">دخول</button>
+
+        <div class="error-message" id="errorMsg"></div>
 
         <div class="form-footer">
             <p>ليس لديك حساب؟ <a href="registration_page.html">تسجيل حساب جديد</a></p>
@@ -90,22 +113,24 @@
     </form>
 
     <script>
-        // دالة لتسجيل الدخول
         function loginUser(event) {
-            event.preventDefault(); // لمنع إعادة تحميل الصفحة عند تقديم النموذج
+            event.preventDefault();
 
-            var email = document.getElementById('email').value;
-            var password = document.getElementById('password').value;
+            const email = document.getElementById('email').value.trim();
+            const password = document.getElementById('password').value.trim();
+            const errorMsg = document.getElementById('errorMsg');
 
-            // تحقق من البيانات المدخلة (مثال بسيط)
+            // مسح رسالة الخطأ عند محاولة جديدة
+            errorMsg.textContent = "";
+
+            // تحقق بسيط (يمكن تغييره لاحقاً للاتصال بقاعدة بيانات أو Firebase)
             if (email === "user@example.com" && password === "password123") {
-                // تخزين حالة تسجيل الدخول في LocalStorage
                 localStorage.setItem('loggedIn', 'true');
-                // توجيه المستخدم إلى صفحة حسابه بعد تسجيل الدخول بنجاح
                 window.location.href = 'account.html';
             } else {
-                alert("البريد الإلكتروني أو كلمة المرور غير صحيحة");
+                errorMsg.textContent = "البريد الإلكتروني أو كلمة المرور غير صحيحة";
             }
+            return false;
         }
     </script>
 </body>
